--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
 <!--    ================================================== -->
 <!--     Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/myJs.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>  </body>
+    <!--<script src="js/myJs.js"></script>-->
     <script src="js/myScript.js"></script>
     <script src="js/typed.js"></script>
 
