--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       <!--
       |***********************************************************|
-      |* Site designed and coded by Emmanuel Ndukwe alias eMASYS *|
+      |* Site designed and coded by Emmanuel Ndukwe              *|
       |* follow me on:                                           *|
       |* facebook: https://web.facebook.com/emasys23             *|
       |* twitter: @emasys_nd                                     *|
@@ -23,11 +23,9 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
-
       <link href="css/mycss.css" rel="stylesheet">
       <link rel="stylesheet" href="css/font-awesome.min.css">
       <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-
       <script type="text/javascript">
           (function(){
               emailjs.init("user_vxUe1nZ3FDkXzG5ch4QUF");
