--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script type="text/javascript">
-        (function(){
+        (function() {
             emailjs.init("user_vxUe1nZ3FDkXzG5ch4QUF");
         })();
     </script>
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <div class="portfolio-link"  href="#portfolioModal2">
+                    <div class="portfolio-link" href="#portfolioModal2">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -116,8 +116,9 @@
                         <h4>Top Secret</h4>
                         <p class="text-muted">Coming Soon</p>
                     </div>
-                </div><div class="col-md-4 col-sm-6 portfolio-item">
-                    <div class="portfolio-link"  href="#portfolioModal2">
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <div class="portfolio-link" href="#portfolioModal2">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -129,8 +130,9 @@
                         <h4>Top Secret</h4>
                         <p class="text-muted">Coming Soon</p>
                     </div>
-                </div><div class="col-md-4 col-sm-6 portfolio-item">
-                    <div class="portfolio-link"  href="#portfolioModal2">
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <div class="portfolio-link" href="#portfolioModal2">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -142,8 +144,9 @@
                         <h4>Top Secret</h4>
                         <p class="text-muted">Coming Soon</p>
                     </div>
-                </div><div class="col-md-4 col-sm-6 portfolio-item">
-                    <div class="portfolio-link"  href="#portfolioModal2">
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <div class="portfolio-link" href="#portfolioModal2">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -155,8 +158,9 @@
                         <h4>Top Secret</h4>
                         <p class="text-muted">Coming Soon</p>
                     </div>
-                </div><div class="col-md-4 col-sm-6 portfolio-item">
-                    <div class="portfolio-link"  href="#portfolioModal2">
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <div class="portfolio-link" href="#portfolioModal2">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -271,8 +275,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Me</h2>
-                    <h3 class="section-subheading text-muted">I promise to reply you as fast as possible, and I won't spam your inbox
-                        with annoying messages.
+                    <h3 class="section-subheading text-muted">I promise to reply you as fast as possible, and I won't spam your inbox with annoying messages.
                     </h3>
                 </div>
             </div>
@@ -298,7 +301,7 @@
                                 </div>
                             </div>
                             <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center" >
+                            <div class="col-lg-12 text-center">
                                 <div id="err">
                                 </div>
                                 <button class="btn btn-xl" type="submit" id="submit">Send Message</button>
@@ -326,21 +329,23 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="#">
+                            <a href="https://twitter.com/emasys_nd" target="_blank">
                                 <i class="fa fa-twitter"></i>
                             </a>
-                        </li> <li class="list-inline-item">
-                            <a href="#">
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://codepen.io/emasys" target="_blank">
                                 <i class="fa fa-codepen"></i>
                             </a>
-                        </li> <li class="list-inline-item">
-                            <a href="#">
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://github.com/emasys">
                                 <i class="fa fa-github"></i>
                             </a>
                         </li>
 
                         <li class="list-inline-item">
-                            <a href="#">
+                            <a href="https://linkedin.com/in/ndukwe-emmanuel-1aa11ab5 ">
                                 <i class="fa fa-linkedin"></i>
                             </a>
                         </li>
