--- a/index.html
+++ b/index.html
@@ -261,10 +261,8 @@
                                         <i class="devicon-bootstrap-plain-wordmark colored fa-4x"></i>
                                         <i class="devicon-nodejs-plain colored fa-4x"></i>
                                         <i class="devicon-mongodb-plain-wordmark colored fa-4x"></i>
+                                        <i class="devicon-react-original-wordmark colored fa-4x"></i>
                                         <i class="devicon-git-plain-wordmark colored fa-4x"></i>
-
-
-
                                     </p>
                                 </div>
                             </div>
