--- a/index.html
+++ b/index.html
@@ -238,7 +238,9 @@
                                         If you are looking to take your business to the next level with an amazing responsive website compatible with all devices, then am your man.
                                     </p>
                                     <p class="text-muted">
-                                        If you are looking to hire an extra hand to help you finish that web design project, you can count on me.
+                                        If you are looking to hire an extra hand to help you finish that 
+                                        web design project, you can count on me. Feel free to look me up on 
+                                        <a href="https://codepen.io/emasys" target="_blank">codepen</a> 
                                     </p>
                                 </div>
                             </div>
