added google meta

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="First portfolio page of Emmanuel Ndukwe">
+    <meta name="description" content="Portfolio page of Emmanuel Ndukwe">
     <meta name="author" content="eMASYS ND">
+    <meta name="google-site-verification" content="O1zRsAezEgRmxxh51DqVYRuADxDEd8vFcVA3KMhvzVU" />
 
     <title>eMASYS</title>
 
