--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Portfolio page of Emmanuel Ndukwe">
     <meta name="author" content="eMASYS ND">
     <meta name="google-site-verification" content="O1zRsAezEgRmxxh51DqVYRuADxDEd8vFcVA3KMhvzVU" />
+    <meta name="google-site-verification" content="ykn_Zxdailcq0yYFTNHy6OLO3vaU_BAWIXwAhYIGtnc" />
 
     <title>eMASYS</title>
 
