--- a/index.html
+++ b/index.html
@@ -423,23 +423,19 @@
 
 
 
-    <!-- Bootstrap core JavaScript -->
+    
     <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="js/scrollreveal.min.js"></script>
     <script src="js/extra.js"></script>
     <script src="vendor/popper/popper.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
     <script src="js/appear.js"></script>
-
-    <!-- Contact form JavaScript -->
     <script src="js/jqBootstrapValidation.js"></script>
     <script src="js/contact_me.js"></script>
-
-    <!-- Custom scripts for this template -->
     <script src="js/agency.min.js"></script>
     <script src="js/typed.js"></script>
+    
 
 </body>
 
