--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="css/agency.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
 
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
@@ -81,7 +81,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-logo">eMASYS</div>
-                <div class="intro-lead-in">Mern Stack Web Developer</div>
+                <div class="intro-lead-in">MERN Stack Web Developer</div>
                 <div class="intro-heading"><span class="tt"></span></div>
                 <div id="arrow">
                     <a href="#portfolioHelper">
