minor design modification

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Portfolio page of Emmanuel Ndukwe">
-    <meta name="author" content="eMASYS ND">
+    <meta name="author" content="Emmanuel Ndukwe">
     <meta name="google-site-verification" content="O1zRsAezEgRmxxh51DqVYRuADxDEd8vFcVA3KMhvzVU" />
     <meta name="google-site-verification" content="ykn_Zxdailcq0yYFTNHy6OLO3vaU_BAWIXwAhYIGtnc" />
 
@@ -41,12 +41,7 @@
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
 
-    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script type="text/javascript">
-        (function() {
-            emailjs.init("user_vxUe1nZ3FDkXzG5ch4QUF");
-        })();
-    </script>
+
 
 </head>
 
@@ -96,7 +91,8 @@
 
 
     <!-- Portfolio Grid -->
-    <div id="portfolioHelper"></div>
+    <div id="portfolioHelper">
+        <!--<span class="ribbon"></span>-->
     <section class="sectionBox" id="portfolio">
         <div class="container">
             <div class="row">
@@ -195,7 +191,7 @@
             </div>
         </div>
     </section>
-
+</div>
     <div class="showAbout" id="showAbout"></div>
 
     <!-- About -->
@@ -422,7 +418,12 @@
 
 
 
-
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init("user_vxUe1nZ3FDkXzG5ch4QUF");
+        })();
+    </script>
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="js/scrollreveal.min.js"></script>
     <script src="js/extra.js"></script>
