--- a/index.html
+++ b/index.html
@@ -356,13 +356,13 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://github.com/emasys">
+                            <a href="https://github.com/emasys" target="_blank">
                                 <i class="fa fa-github"></i>
                             </a>
                         </li>
 
                         <li class="list-inline-item">
-                            <a href="https://linkedin.com/in/ndukwe-emmanuel-1aa11ab5 ">
+                            <a href="https://linkedin.com/in/ndukwe-emmanuel-1aa11ab5 " target="_blank">
                                 <i class="fa fa-linkedin"></i>
                             </a>
                         </li>
