--- a/simonGame/index.html
+++ b/simonGame/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+            <p>You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
     <div class="header">
         <p id="htp">How to play</p>
@@ -95,7 +95,7 @@
         </div>
     </div>
     <footer class="footer">
-        <a href="#" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
+        <a href="https://github.com/emasys" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
     </footer>
 
     <script src="js/jquery.min.js"></script>
