--- a/simonGame/index.html
+++ b/simonGame/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>eMASYS' Simon Game</title>
-    <meta name="description" content="">
+    <meta name="description" content="A simple simon game">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Monoton|Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
