--- a/fccCalc/index.html
+++ b/fccCalc/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
     <link type="text/css" rel="stylesheet" href="css/style.css">
 
 </head>
+
 <body>
     <div class="container">
         <header>
-            <h3 id="borders">FCC JavaScript Calc</h3>
+            <h3 id="borders">JavaScript Calc</h3>
         </header>
         <div id="screen">
             <div class="typed">
@@ -20,33 +22,33 @@
             </div>
         </div>
         <div>
-        <ul class="buttons" id="buttons">
-            <li class="firstRow">AC</li>
-            <li class="firstRow">C</li>
-            <li class="firstRow">%</li>
-            <li class="firstRow">/</li>
+            <ul class="buttons" id="buttons">
+                <li class="firstRow">AC</li>
+                <li class="firstRow">DEL</li>
+                <li class="firstRow">%</li>
+                <li class="firstRow">&divide;</li>
 
-            <li>7</li>
-            <li>8</li>
-            <li>9</li>
-            <li class="sideCol">*</li>
+                <li>7</li>
+                <li>8</li>
+                <li>9</li>
+                <li class="sideCol">x</li>
 
-            <li>4</li>
-            <li>5</li>
-            <li>6</li>
-            <li class="sideCol">-</li>
+                <li>4</li>
+                <li>5</li>
+                <li>6</li>
+                <li class="sideCol">-</li>
 
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li class="sideCol">+</li>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+                <li class="sideCol">+</li>
 
-            <li>00</li>
-            <li>0</li>
-            <li>.</li>
-            <li id="equals">=</li>
-        </ul>
-      </div>
+                <li>00</li>
+                <li>0</li>
+                <li>.</li>
+                <li id="equals">=</li>
+            </ul>
+        </div>
         <footer class="footer">
             <p>Coded by <a href="https://twitter.com/emasys_nd">eMASYS</a></p>
         </footer>
@@ -58,4 +60,5 @@
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>-->
     <script src="js/script.js"></script>
 </body>
+
 </html>
