--- a/index.html
+++ b/index.html
@@ -93,105 +93,167 @@
     <!-- Portfolio Grid -->
     <div id="portfolioHelper">
         <!--<span class="ribbon"></span>-->
-    <section class="sectionBox" id="portfolio">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Portfolio</h2>
-                    <hr id="thread2">
+        <section class="sectionBox" id="portfolio">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <h2 class="section-heading">Portfolio</h2>
+                        <hr id="thread2">
+                    </div>
+                </div>
+                <div class="row">
+
+                    <div class="col-md-4 col-sm-6 portfolio-item" id="one">
+                        <a href="http://cashstreamgames.com" target="_blank">
+                            <div class="portfolio-link">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content">
+                                        <i class="fa fa-plus fa-3x"></i>
+                                    </div>
+                                </div>
+                                <img class="img-fluid" src="img/cs.fw.png" alt="" id="oneImg">
+                            </div>
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>Cash Stream Games</h4>
+                            <p class="text-muted">Landing Page</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 portfolio-item" id="two">
+                        <a href="http://emmanuelndukwe.com/fccCalc" target="_blank">
+                            <div class="portfolio-link">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content">
+                                        <i class="fa fa-plus fa-3x"></i>
+                                    </div>
+                                </div>
+                                <img class="img-fluid" src="img/calc.fw.png" alt="" id="threeImg">
+                            </div>
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>Javascript Calculator</h4>
+                            <p class="text-muted">Simple functional Calculator</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 portfolio-item" id="three">
+                        <a href="http://emmanuelndukwe.com/pomodoro" target="_blank">
+                            <div class="portfolio-link">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content">
+                                        <i class="fa fa-plus fa-3x"></i>
+                                    </div>
+                                </div>
+                                <img class="img-fluid" src="img/pomodoro.fw.png" alt="" id="threeImg">
+                            </div>
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>Pomodoro Timer</h4>
+                            <p class="text-muted">Productivity</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 portfolio-item" id="four">
+                        <a href="http://emmanuelndukwe.com/RandomQuotes" target="_blank">
+                            <div class="portfolio-link">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content">
+                                        <i class="fa fa-plus fa-3x"></i>
+                                    </div>
+                                </div>
+                                <img class="img-fluid" src="img/rq.fw.png" alt="" id="fourImg">
+                            </div>
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>Inspirational Qoutes</h4>
+                            <p class="text-muted">Be Inspired</p>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 col-sm-6 portfolio-item" id="five">
+                        <a href="http://emmanuelndukwe.com/simonGame" target="_blank">
+                            <div class="portfolio-link">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content">
+                                        <i class="fa fa-plus fa-3x"></i>
+                                    </div>
+                                </div>
+                                <img class="img-fluid" src="img/simon.fw.png" alt="" id="fiveImg">
+                            </div>
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>Simon Game</h4>
+                            <p class="text-muted">Have a little fun</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 portfolio-item" id="six">
+                        <a href="http://emmanuelndukwe.com/ticgame" target="_blank">
+                            <div class="portfolio-link">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content">
+                                        <i class="fa fa-plus fa-3x"></i>
+                                    </div>
+                                </div>
+                                <img class="img-fluid" src="img/ticgame.fw.png" alt="" id="sixImg">
+                            </div>
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>Tic Tac Toe</h4>
+                            <p class="text-muted">Traditional Tic-Tac-Toe Game</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 portfolio-item" id="six">
+                        <a href="http://emmanuelndukwe.com/wikipediaViewer" target="_blank">
+                            <div class="portfolio-link">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content">
+                                        <i class="fa fa-plus fa-3x"></i>
+                                    </div>
+                                </div>
+                                <img class="img-fluid" src="img/wiki.fw.png" alt="" id="sixImg">
+                            </div>
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>Wikipedia Viewer</h4>
+                            <p class="text-muted">Custom Wikipedia portal</p>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 col-sm-6 portfolio-item" id="six">
+                        <a href="http://emmanuelndukwe.com/twitchTv" target="_blank">
+                            <div class="portfolio-link">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content">
+                                        <i class="fa fa-plus fa-3x"></i>
+                                    </div>
+                                </div>
+                                <img class="img-fluid" src="img/twitch.fw.png" alt="" id="sixImg">
+                            </div>
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>Twitch Tv</h4>
+                            <p class="text-muted">Custom twitch Tv Viewer</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 portfolio-item" id="six">
+                        <a href="http://emmanuelndukwe.com/weatherApp" target="_blank">
+                            <div class="portfolio-link">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content">
+                                        <i class="fa fa-plus fa-3x"></i>
+                                    </div>
+                                </div>
+                                <img class="img-fluid" src="img/weather.fw.png" alt="" id="sixImg">
+                            </div>
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>Weather App</h4>
+                            <p class="text-muted">Real time weather web app</p>
+                        </div>
+                    </div>
+
                 </div>
             </div>
-            <div class="row">
-
-                <div class="col-md-4 col-sm-6 portfolio-item" id="one">
-                    <div class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="img/cs.fw.png" alt="" id="oneImg">
-                    </div>
-                    <div class="portfolio-caption">
-                        <h4>Cash Stream Games</h4>
-                        <p class="text-muted">Landing Page</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item" id="two">
-                    <div class="portfolio-link" href="#portfolioModal2">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="img/empty.fw.png" alt="" id="twoImg">
-                    </div>
-                    <div class="portfolio-caption">
-                        <h4>Top Secret</h4>
-                        <p class="text-muted">Coming Soon</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item" id="three">
-                    <div class="portfolio-link" href="#portfolioModal2">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="img/empty.fw.png" alt="" id="threeImg">
-                    </div>
-                    <div class="portfolio-caption">
-                        <h4>Top Secret</h4>
-                        <p class="text-muted">Coming Soon</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item" id="four">
-                    <div class="portfolio-link" href="#portfolioModal2">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="img/empty.fw.png" alt="" id="fourImg">
-                    </div>
-                    <div class="portfolio-caption">
-                        <h4>Top Secret</h4>
-                        <p class="text-muted">Coming Soon</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item" id="five">
-                    <div class="portfolio-link" href="#portfolioModal2">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="img/empty.fw.png" alt="" id="fiveImg">
-                    </div>
-                    <div class="portfolio-caption">
-                        <h4>Top Secret</h4>
-                        <p class="text-muted">Coming Soon</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item" id="six">
-                    <div class="portfolio-link" href="#portfolioModal2">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="img/empty.fw.png" alt="" id="sixImg">
-                    </div>
-                    <div class="portfolio-caption">
-                        <h4>Top Secret</h4>
-                        <p class="text-muted">Coming Soon</p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
-</div>
+        </section>
+    </div>
     <div class="showAbout" id="showAbout"></div>
 
     <!-- About -->
@@ -233,11 +295,11 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                        If you are looking to take your business to the next level with an amazing responsive website compatible with all devices, then am your man.
+                                        Right now I am a full-stack web developer, my main stack is MERN - Mongodb, Express, ReactJS, NodeJS.<br/> If you are looking to take your business to the next level with an amazing responsive website compatible
+                                        with all devices, then am your man.
                                     </p>
                                     <p class="text-muted">
-                                        If you are looking to hire an extra hand to help you finish that web design project, you can count on me. Feel free to look me up on
-                                        <a href="https://codepen.io/emasys" target="_blank">codepen</a>
+                                        If you are looking to hire an extra hand to help you finish that web design project, you can count on me.
                                     </p>
                                 </div>
                             </div>
@@ -249,7 +311,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Skills</h4>
-                                    <h4 class="subheading">I love these tools</h4>
+                                    <h4 class="subheading">I work very well with these tools</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
@@ -257,7 +319,6 @@
                                         <i class="devicon-css3-plain-wordmark colored fa-4x"></i>
                                         <i class="devicon-jquery-plain-wordmark colored fa-4x"></i>
                                         <i class="devicon-javascript-plain colored fa-4x"></i>
-                                        <i class="devicon-bootstrap-plain-wordmark colored fa-4x"></i>
                                         <i class="devicon-nodejs-plain colored fa-4x"></i>
                                         <i class="devicon-mongodb-plain-wordmark colored fa-4x"></i>
                                         <i class="devicon-react-original-wordmark colored fa-4x"></i>
@@ -379,42 +440,6 @@
         </div>
     </footer>
 
-    <!-- Portfolio Modals -->
-
-    <!-- Modal 1 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="close-modal" data-dismiss="modal">
-                    <div class="lr">
-                        <div class="rl"></div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8 mx-auto">
-                            <div class="modal-body">
-                                <!-- Project Details Go Here -->
-                                <h2>Cash Stream Games</h2>
-                                <img class="img-fluid d-block mx-auto" src="img/cashstreams.png" alt="">
-                                <p>
-                                    This is a simple website that promotes a mobile game.
-                                    <br><a href="http://cashstreamgames.com" target="_blank" class="btn btn-primary">check it out</a>
-                                </p>
-                                <ul class="list-inline">
-                                    <li>Date: July 2017</li>
-                                    <li>Category: Web Page</li>
-                                </ul>
-                                <button class="btn btn-primary" data-dismiss="modal" type="button">
-                    <i class="fa fa-times"></i>
-                    Close Project</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
 
 
