fixed weather app link

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 portfolio-item" id="six">
-                        <a href="http://emmanuelndukwe.com/weatherApp" target="_blank">
+                        <a href="https://codepen.io/emasys/full/LLJYmp/" target="_blank">
                             <div class="portfolio-link">
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content">
