updated the about section

--- a/index.html
+++ b/index.html
@@ -279,7 +279,8 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                        My name is Emmanuel Ndukwe, I am a tireless seeker of knowledge, I love coding. I started as a graphic designer then I dabbled into web design, this curiousity led to a lot of new discoveries which ultimately made me fall in love with programming.
+                                        My name is Emmanuel Ndukwe, a graduate of Ahmadu Bello University, Zaria in Nigeria, I am an incessant seeker of knowledge, I love coding. I started as a graphic designer then I dabbled into web design, this curiousity led to a lot of new discoveries
+                                        which ultimately made me fall in love with programming.
                                     </p>
                                 </div>
                             </div>
