--- a/weatherApp/index.html
+++ b/weatherApp/index.html
@@ -13,9 +13,11 @@
     <meta name="description" content="A simple weather app that consumes darkski api.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="css/material.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900,900i" rel="stylesheet">
+    <link rel="stylesheet" href="css/materialize.min.css">
+    <link rel="stylesheet" href="css/ionicons.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <script defer src="js/material.js"></script>
+    <script src="js/moment.js"></script>
 
 </head>
 
@@ -23,43 +25,81 @@
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+    <div class="col s12 bgImg" id="bgImg">
 
+        <div class="temp">
+            <span id="temp">24<em>°F</em></span>
+            <div class="WeatherIcons">
+                <i class="icon ion-ios-partlysunny" id="main"></i>
 
-
-    <div class="mdl-grid">
-        <div class="mdl-cell--5-offset-desktop ">
-            <div class="mdl-cell--middle">
-                <h3 class="display-2">
-                    welcome
-                </h3>
             </div>
 
-            <div class="demo-card-square mdl-card mdl-shadow--2dp ">
-                <div class=" img-sync mdl-card__title mdl-card--expand ">
-                    <h2 class="mdl-card__title-text" id="minutely"></h2>
-                    <p class="mdl-card__title-text" id="today"></p>
 
-                </div>
-                <div class="mdl-card__supporting-text" id="city">
-                    123, street name, city, country
-                </div>
-                <div class="mdl-card__actions mdl-card--border">
-                    <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-                  View Updates
-                    </button>
-                    <span id="location"></span>
-
-                </div>
-                <div class="mdl-card__menu">
-                    <button class="mdl-button mdl-button--icon mdl-button--raised mdl-js-button mdl-js-ripple-effect" id="temp" style="width:70px; height:70px; background-color:aliceblue">
-                          C
-                        </button>
-                </div>
-            </div>
         </div>
     </div>
+    <div class=" white center-align z-depth-4" id="info">
+        <div class="row">
+            <div class="col s12 m4">
+                <div class="location">
+                    <h4 id="city"></h4>
+                    <p>
+                        <b><span id="date1"></span>'s weather summary:</b> <br/><span id="summary">--</span>
+                    </p>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+                </div>
+            </div>
+            <div class="col s4 m2 ">
+                <p id="date2"></p>
+                <p><i class="icon ion-ios-partlysunny weekly" id="main1"></i></p>
+                <p id="temperature1"> 24 </p>
+                <p id="status1"> 2:00 </p>
+
+            </div>
+            <div class="col s4 m2">
+                <p id="date3"></p>
+                <p><i class="icon ion-ios-partlysunny weekly" id="main2"></i></p>
+                <p id="temperature2"> 24 </p>
+                <p id="status2"> 2:00 </p>
+
+            </div>
+            <div class="col s4 m2">
+                <p id="date4"></p>
+                <p><i class="icon ion-ios-partlysunny weekly" id="main3"></i></p>
+                <p id="temperature3"> 24 </p>
+                <p id="status3"> 2:00 </p>
+
+            </div>
+
+
+        </div>
+        <div class="fixed-action-btn horizontal click-to-toggle">
+            <a class="btn-floating btn-large black">
+                <i class="material-icons">menu</i>
+            </a>
+            <ul>
+                <li id="fer"><a class="btn-floating teal fixIcon">°F</a></li>
+                <li id="cel"><a class="btn-floating blue fixIcon">°C</a></li>
+            </ul>
+        </div>
+
+        <footer class="page-footer black">
+            <div class="footer-copyright">
+                <div class="container">
+                    <a class="grey-text text-lighten-4 " href="https://emasys.github.io">Made by eMASYS</a>
+                </div>
+            </div>
+        </footer>
+
+    </div>
+
+
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.marquee/1.3.1/jquery.marquee.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script src="js/api.js"></script>
 </body>
 
