--- a/weatherApp/index.html
+++ b/weatherApp/index.html
@@ -82,15 +82,18 @@
             </ul>
         </div>
 
-        <footer class="page-footer black">
-            <div class="footer-copyright">
-                <div class="container">
-                    <a class="grey-text text-lighten-4 " href="https://emasys.github.io">Made by eMASYS</a>
+        <footer class=" black">
+            <div class="container ">
+                <div class="row" style="margin: 0;">
+                    <div class="col s12">
+                        <a class="grey-text text-lighten-4 " target="_blank" href="https://emasys.github.io">made by emasys</a>
+                    </div>
                 </div>
             </div>
         </footer>
-
     </div>
+
+
 
 
 
