--- a/weatherApp/index.html
+++ b/weatherApp/index.html
@@ -28,7 +28,8 @@
     <div class="col s12 bgImg" id="bgImg">
 
         <div class="temp">
-            <span id="temp">24<em>°F</em></span>
+            <span id="temp">--<em>--</em></span>
+            <p id="cond">--</p>
             <div class="WeatherIcons">
                 <i class="icon ion-ios-partlysunny" id="main"></i>
 
