started a new project xxx

--- a/weatherApp/index.html
+++ b/weatherApp/index.html
@@ -52,22 +52,22 @@
             <div class="col s4 m2 ">
                 <p id="date2"></p>
                 <p><i class="icon ion-ios-partlysunny weekly" id="main1"></i></p>
-                <p id="temperature1"> 24 </p>
-                <p id="status1"> 2:00 </p>
+                <p id="temperature1">--</p>
+                <p id="status1"> --</p>
 
             </div>
             <div class="col s4 m2">
                 <p id="date3"></p>
                 <p><i class="icon ion-ios-partlysunny weekly" id="main2"></i></p>
-                <p id="temperature2"> 24 </p>
-                <p id="status2"> 2:00 </p>
+                <p id="temperature2"> -- </p>
+                <p id="status2"> -- </p>
 
             </div>
             <div class="col s4 m2">
                 <p id="date4"></p>
                 <p><i class="icon ion-ios-partlysunny weekly" id="main3"></i></p>
-                <p id="temperature3"> 24 </p>
-                <p id="status3"> 2:00 </p>
+                <p id="temperature3"> -- </p>
+                <p id="status3"> -- </p>
 
             </div>
 
