--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                         </a>
                         <div class="portfolio-caption">
                             <h4>Weather App</h4>
-                            <p class="text-muted">Real time weather web app</p>
+                            <p class="text-muted">Real time weather forcast app</p>
                         </div>
                     </div>
 
@@ -332,7 +332,7 @@
 
 
                         <li class="timeline-inverted">
-                            <div class="timeline-image">
+                            <div class="timeline-image" id="last">
                                 <h4>Be Part
                                     <br>Of My
                                     <br>Story!</h4>
