--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
     <section id="about" class="sectionAbout">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
+                <div class="col-lg-12 text-center header-box">
+                    <h2 class="section-heading">About Me</h2>
                     <hr id="thread2">
                 </div>
             </div>
