added an new react app

--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
     <link rel="manifest" href="img/favicon/manifest.json">
     <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <!-- Chrome, Firefox OS and Opera -->
-    <meta name="theme-color" content="#fed136">
+    <meta name="theme-color" content="#222222">
     <!-- Windows Phone -->
-    <meta name="msapplication-navbutton-color" content="#fed136">
+    <meta name="msapplication-navbutton-color" content="#222222">
     <!-- iOS Safari -->
-    <meta name="apple-mobile-web-app-status-bar-style" content="#fed136">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#222222">
 
-    <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
@@ -36,10 +35,8 @@
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-
-    <!-- Custom styles for this template -->
-    <link href="css/styles.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 
 
 
@@ -218,19 +215,19 @@
                     </div>
 
                     <div class="col-md-4 col-sm-6 portfolio-item" id="six">
-                        <a href="http://emmanuelndukwe.com/twitchTv" target="_blank">
+                        <a href="https://git-user-portal.herokuapp.com/" target="_blank">
                             <div class="portfolio-link">
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content">
                                         <i class="fa fa-plus fa-3x"></i>
                                     </div>
                                 </div>
-                                <img class="img-fluid" src="img/twitch.fw.png" alt="" id="sixImg">
+                                <img class="img-fluid" src="img/git.fw.png" alt="" id="sixImg">
                             </div>
                         </a>
                         <div class="portfolio-caption">
-                            <h4>Twitch Tv</h4>
-                            <p class="text-muted">Custom twitch Tv Viewer</p>
+                            <h4>Top Github Users</h4>
+                            <p class="text-muted">Find world-class developers worldwide</p>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 portfolio-item" id="six">
