--- a/weatherApp/index.html
+++ b/weatherApp/index.html
@@ -28,7 +28,7 @@
     <div class="col s12 bgImg" id="bgImg">
 
         <div class="temp">
-            <span id="temp">--<em>--</em></span>
+            <span id="temp">70<em>--</em></span>
             <p id="cond">--</p>
             <div class="WeatherIcons">
                 <i class="icon ion-ios-partlysunny" id="main"></i>
@@ -52,21 +52,21 @@
             <div class="col s4 m2 ">
                 <p id="date2"></p>
                 <p><i class="icon ion-ios-partlysunny weekly" id="main1"></i></p>
-                <p id="temperature1">--</p>
+                <p id="temperature1">71</p>
                 <p id="status1"> --</p>
 
             </div>
             <div class="col s4 m2">
                 <p id="date3"></p>
                 <p><i class="icon ion-ios-partlysunny weekly" id="main2"></i></p>
-                <p id="temperature2"> -- </p>
+                <p id="temperature2"> 82</p>
                 <p id="status2"> -- </p>
 
             </div>
             <div class="col s4 m2">
                 <p id="date4"></p>
                 <p><i class="icon ion-ios-partlysunny weekly" id="main3"></i></p>
-                <p id="temperature3"> -- </p>
+                <p id="temperature3"> 90 </p>
                 <p id="status3"> -- </p>
 
             </div>
