--- a/empl/index.html
+++ b/empl/index.html
@@ -118,6 +118,9 @@
                 <p>Are you a graduate looking for work?</p>
             </div>
         </div>
+    </div>
+
+    <div class="container">
         <div class="row stages">
             <div class="col-lg-4 col-sm-12">
                 <div class="details" id="signUp">
@@ -154,61 +157,63 @@
             </div>
 
         </div>
-        <div class="row">
-            <div class="col-12 ribbon">
-                <p>Some of the companies waiting for you</p>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row testimony justify-content-center">
-                <div class="col companies">
-                    <img src="/images/coca-cola-logo-260x260.png" alt="cocacola">
-                </div>
+    </div>
 
-                <div class="col companies">
-                    <img src="/images/agip.png" alt="cocacola">
-                </div>
-                <div class="col companies">
-                    <img src="/images/unilever.jpg" alt="cocacola">
-                </div>
-                <div class="col companies">
-                    <img src="/images/gtb.jpg" alt="cocacola">
-                </div>
-                <div class="col companies">
-                    <img src="/images/coca-cola-logo-260x260.png" alt="cocacola">
-                </div>
-                <div class="col companies">
-                    <img src="/images/watermark.jpg" alt="cocacola">
-                </div>
-                <div class="col companies">
-                    <img src="/images/unilever.jpg" alt="cocacola">
-                </div>
-
-            </div>
+    <div class="row">
+        <div class="col-12 ribbon">
+            <p>Some of the companies waiting for you</p>
         </div>
+    </div>
+    <div class="container">
+        <div class="row testimony justify-content-center">
+            <div class="col companies">
+                <img src="images/coca-cola-logo-260x260.png" alt="cocacola">
+            </div>
 
-        <div class="row footer justify-content-center">
-            <div class="col-lg-4 col-sm-12 text-center">
-                &copy;2017
+            <div class="col companies">
+                <img src="images/agip.png" alt="cocacola">
             </div>
-            <div class="col-lg-4 col-sm-12 text-center">
-                <a href="#"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a>&nbsp;
-                <a href="#"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>&nbsp;
-                <a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>&nbsp;
+            <div class="col companies">
+                <img src="images/unilever.jpg" alt="cocacola">
             </div>
-            <div class="col-lg-4 col-sm-12 text-center">
-                <a href="#"> somelink </a>
+            <div class="col companies">
+                <img src="images/gtb.jpg" alt="cocacola">
             </div>
+            <div class="col companies">
+                <img src="images/coca-cola-logo-260x260.png" alt="cocacola">
+            </div>
+            <div class="col companies">
+                <img src="images/watermark.jpg" alt="cocacola">
+            </div>
+            <div class="col companies">
+                <img src="images/unilever.jpg" alt="cocacola">
+            </div>
+
         </div>
+    </div>
+
+    <div class="row footer justify-content-center">
+        <div class="col-lg-4 col-sm-12 text-center">
+            &copy;2017
+        </div>
+        <div class="col-lg-4 col-sm-12 text-center">
+            <a href="#"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a>&nbsp;
+            <a href="#"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>&nbsp;
+            <a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>&nbsp;
+        </div>
+        <div class="col-lg-4 col-sm-12 text-center">
+            <a href="#"> somelink </a>
+        </div>
+    </div>
 
     </div>
-    <script src="/js/pinned.js"></script>
-    <script src="/js/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
-    <script src="/js/popper.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/pinned.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="js/pinned.js"></script>
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="slick/slick.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/pinned.js"></script>
+    <script src="js/script.js"></script>
 
 </body>
 
