--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 portfolio-item" id="six">
-                        <a href="http://emmanuelndukwe.com/wikipediaViewer" target="_blank">
+                        <a href="http://emmanuelndukwe.com/wiki/" target="_blank">
                             <div class="portfolio-link">
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content">
